ref#22187 - Added tests for memberEnrollment

--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -15,7 +15,7 @@
 
 <div id="dataTableSelect" class="in-front" >
   Filter by:
-  <select class="dataselect">
+  <select class="dataselect" name="operation[operation_type]">
     <option value="all"> all </option>
     <option value="billing"> billing </option>
     <option value="communications"> communications </option>
