--- a/app/views/admin/agents/index.html.erb
+++ b/app/views/admin/agents/index.html.erb
@@ -13,7 +13,7 @@
       <th><%= t('activerecord.attributes.agent.email') %></th>
       <th><%= t('activerecord.attributes.agent.username') %></th>
       <th><%= t('activerecord.attributes.agent.locked_at') %></th>
-      <th><%= t('activerecord.attributes.agent.created_at') %></th>
+      <th id="th_created_at"><%= t('activerecord.attributes.agent.created_at') %></th>
       <th><%= t('actions') %></th>
     </tr>
   </thead>
