ref#22436-Added button 'mark_as_sent' on member's profile fulfillments. And also added integration tests.

--- a/app/views/members/_fulfillments.html.erb
+++ b/app/views/members/_fulfillments.html.erb
@@ -21,8 +21,12 @@
         <td> <%= I18n.l fulfillment.renewable_at, :format => :long unless fulfillment.renewable_at.nil? %> </td>
         <td> <%= fulfillment.status %> </td>
         <td>
-          <%= form_for @fulfillment, :as => :fulfillment, :url => member_resend_fulfillment_path(:fulfillment_id => fulfillment.id), do |f| %>
-            <%= f.submit t('resend'), :name => 'resend', :class => "btn btn-warning confirm" if fulfillment.processing? %>
+          <% if fulfillment.processing? %>
+            <% unless @current_member.wrong_address %>
+              <%= link_to 'Mark as sent', '#', :id => "mark_as_sent", :name => fulfillment.id, :class=> "btn btn-small" %>
+            <% else %>
+              <%= 'activerecord.attributes.member.undeliverable' %>
+            <% end %>
           <% end %>
         </td>
       </tr>
