--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -43,7 +43,7 @@
         <%= t('activerecord.attributes.credit_card.active') if cc.active %>
         <% if cc.can_be_activated? %>
           <%= form_for @cc, :as => :credit_card, :url => credit_card_activate_path(:credit_card_id => cc.id), do |f| %>
-            <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm" %>
+            <%= submit_tag 'Activate', :name => 'activate', :class=> "btn btn-warning confirm", :disabled => (cannot? :activate, CreditCard) %>
           <% end %>
         <% end %>
       </td>
