refs #22472 - improvements in membership datatable

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -314,6 +314,7 @@
   <% if @current_member.api_member and can? :see_sync_status, Member %>
     <li><a href="#sync_status" data-toggle="tab">Sync Status</a></li>
   <% end %>
+  <li><a href="#memberships" data-toggle="tab">Memberships</a></li>
 </ul>
 
 <div class="tab-content">
