--- a/app/views/members/_memberships.html.erb
+++ b/app/views/members/_memberships.html.erb
@@ -1,4 +1,4 @@
-_<table id="memberships_table" class="table table-bordered table-condensed dataTable" data-source="<%= memberships_url(format: "json") %>">
+<table id="memberships_table" class="table table-bordered table-condensed dataTable" data-source="<%= memberships_url(format: "json") %>">
   <thead>
     <tr>
       <th> ID </th>
