ref#22550-Fixed list of clubs for select on header. Now it its according to the agent's roles.

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -43,12 +43,12 @@
             <li>
               <% selected = @current_club ? [ members_path(@current_club.partner.prefix, @current_club.name) ] : nil %>
               <%= select_tag "change_partner",
-                options_for_select(Club.all.collect{ |u| [ "#{u.partner.prefix} - #{u.name}", members_path(u.partner.prefix, u.name) ]}, 
+                options_for_select((@current_agent.has_role?('admin') ? Club.all : @current_agent.clubs).collect{ |u| [ "#{u.partner.prefix} - #{u.name}", members_path(u.partner.prefix, u.name) ]}, 
                   selected ), 
                 :onchange => "window.open(this.options[this.selectedIndex].value, '_top')", :style => "margin-top: 5px;" %>
+                <%=  %>
             </li>
           </ul>
-
 
 
         </div><!--/.nav-collapse -->
