ref#22855-Fixed new product button.

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,7 @@
 <section>
   <div class="page-header">
     <h1>Search</h1>
-    <% if can? :create, @current_agent %>
+    <% if can? :create, Product %>
       <%= link_to(new_product_path, :class => "btn btn-primary btn_on_header") do %> 
         <i class="icon-plus"></i> New Product
       <% end %>
