--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -1,5 +1,5 @@
 
-<table class="table table-bordered table-condensed">
+<table class="table table-bordered table-condensed" id="credit_cards">
   <thead>
     <tr>
       <th> 
